--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,34 +10,17 @@ meta[name="viewport" content="width=device-width,initial-scale=1"]
   = javascript_importmap_tags
 body
   header
-    /! Fixed navbar
-    nav.navbar.navbar-expand-md.navbar-dark.fixed-top.bg-dark
-      .container-fluid
-        a.navbar-brand href="#"  Fixed navbar
-        button.navbar-toggler aria-controls="navbarCollapse" aria-expanded="false" aria-label=("Toggle navigation") data-bs-target="#navbarCollapse" data-bs-toggle="collapse" type="button" 
-          span.navbar-toggler-icon
-        #navbarCollapse.collapse.navbar-collapse
-          ul.navbar-nav.me-auto.mb-2.mb-md-0
-            li.nav-item
-              a.nav-link.active aria-current="page" href="#"  Home
-            li.nav-item
-              a.nav-link href="#"  Link
-            li.nav-item
-              a.nav-link.disabled aria-disabled="true" href="#" tabindex="-1"  Disabled
-          form.d-flex
-            input.form-control.me-2 aria-label="Search" placeholder="Search" type="search" /
-            button.btn.btn-outline-success type="submit"  Search
-  /! Begin page content
-  main.flex-shrink-0
+    nav.navbar.navbar-expand-md.navbar-dark.bg-dark
+      .container
+        a.navbar-brand href="#" Blog
+        ul.navbar-nav.mr-auto.mt-2.mt-lg-0
+          li.nav-item.active
+            = link_to("Войти", new_user_session_path, class: "nav-link")
+          li.nav-item
+            = link_to("Регистрация", new_user_registration_path, class: "nav-link")
+  main.flex-shrink-0.mt-5
     .container
-      h1.mt-5 Sticky footer with fixed navbar
-      p.lead
-        | Pin a footer to the bottom of the viewport in desktop browsers with this custom HTML and CSS. A fixed navbar has been added with
-        code.small padding-top: 60px;
-      p
-        | Back to
-        a href="/docs/5.0/examples/sticky-footer/"  the default sticky footer
-        | minus the navbar.
+      = yield
   footer.footer.mt-auto.py-3.bg-light
     .container
       span.text-muted Place sticky footer content here.
