--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -3,22 +3,21 @@ html
   head
     title
       | RailsProjectLvl2
-meta[name="viewport" content="width=device-width,initial-scale=1"]
+meta[name='viewport' content='width=device-width,initial-scale=1']
   = csrf_meta_tags
   = csp_meta_tag
-  = stylesheet_link_tag "application", "data-turbo-track": "reload"
+  = stylesheet_link_tag 'application', 'data-turbo-track': 'reload'
   = javascript_importmap_tags
 body
   header
     nav.navbar.navbar-expand-md.navbar-dark.bg-dark
       .container
-        a.navbar-brand href="#" Blog
+        a.navbar-brand href='#' Blog
         ul.navbar-nav.mr-auto.mt-2.mt-lg-0
           li.nav-item.active
-            = link_to("Войти", new_user_session_path, class: "nav-link")
+            = link_to('Войти', new_user_session_path, class: 'nav-link')
           li.nav-item
-            = link_to("Регистрация", new_user_registration_path, class: "nav-link")
+            = link_to('Регистрация', new_user_registration_path, class: 'nav-link')
   main.flex-shrink-0.mt-5
     .container
       = yield
-
