--- a/app/views/posts/new.html.slim
+++ b/app/views/posts/new.html.slim
@@ -1,6 +1,2 @@
 h1 Создать пост
-= simple_form_for(@post) do |f|
-  = f.input :title
-  = f.input :body
-  = f.association :post_category, value_method: :id
-  = f.submit
+= render 'form', post: @post
