--- a/app/views/posts/comments/_form.html.slim
+++ b/app/views/posts/comments/_form.html.slim
@@ -1,4 +1,5 @@
-= turbo_frame_tag dom_id_for_records(post, prefix: "comment_form") do
+div id="#{dom_id_for_records(post, prefix: 'comment_form')}"
   = simple_form_for(comment, url: post_comments_path(post)) do |f|
-    = f.input :content, label: false, input_html: { class: "mt-4" }
-    = f.button :submit, class: "btn-primary mt-4", onsubmit: "this.form.requestSubmit()"
+    = f.input :parent_id, as: :hidden
+    = f.input :content, label: false, input_html: { class: 'mt-4' }
+    = f.button :submit, class: 'btn-primary mt-4', onsubmit: 'this.form.requestSubmit()'
