--- a/app/views/posts/comments/_comment.html.slim
+++ b/app/views/posts/comments/_comment.html.slim
@@ -9,5 +9,11 @@
     .w-100
       .mb-3
         = comment.content
-    hr.my-2
+      .small
+        .nested_comments.ml-2
+          = nested_comments(post, comment.descendants.arrange(order: :created_at))
+  hr.my-2
   .mb-2.m-4
+    a data-bs-toggle='collapse' href="#new_post_comment_#{comment.id}" Ответить
+    .collapse data-bs-target="#new_post_comment_#{comment.id}" id="new_post_comment_#{comment.id}"
+      = render 'posts/comments/form', post:, comment: PostComment.new(parent_id: comment.id)
