--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -18,10 +18,13 @@
           span
             = time_ago_in_words(@post.created_at)
         #likes-section
-          span.me-2 0
+          - if @post_like.present?
+            = render 'posts/likes/dislike', post: @post, post_like: @post_like
+          - else
+            = render 'posts/likes/like', post: @post
   .lead.mb-3
     | Комментарий
-    = render "posts/comments/form", post: @post, comment: @comment
+    = render 'posts/comments/form', post: @post, comment: @comment
   = turbo_frame_tag dom_id_for_records(@post, prefix: 'comments')
-    - @post.post_comments.each do |pc|
-      = render "posts/comments/comment", comment: pc
+    - @post.post_comments.where(ancestry: nil).each do |pc|
+      = render 'posts/comments/comment', post: @post, comment: pc
