add likes count to posts#index

--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -10,7 +10,7 @@
             .card-text.mb-2
               = p.body
             .text-right.small.text-muted.mt-auto
-              span.me-2 Понравилось: 0
+              span.me-2 Понравилось: #{p.post_likes_count}
               span.me-2
                 = time_ago_in_words(p.created_at)
               span
