--- a/app/views/devise/passwords/new.html.slim
+++ b/app/views/devise/passwords/new.html.slim
@@ -7,5 +7,5 @@ h2
     br
     = f.email_field :email, autofocus: true, autocomplete: 'email', class: 'form-control'
   .actions.mt-3
-    = f.submit 'Send me reset password instructions', class: "btn btn-primary"
+    = f.submit 'Send me reset password instructions', class: 'btn btn-primary'
 = render 'devise/shared/links'
