--- a/app/views/posts/comments/_comment.html.slim
+++ b/app/views/posts/comments/_comment.html.slim
@@ -1,16 +1,15 @@
 .card.mb-4
   .card-header.small.mb-2.d-flex
-    div id="#{dom_id_for_records(comment)}"
-      span.font-weight-bold
-        = comment.user.email
-      span.mx-2.font-weight-light
-        = time_ago_in_words(comment.created_at)
+    span.font-weight-bold
+      = comment.user.email
+    span.mx-2.font-weight-light
+      = time_ago_in_words(comment.created_at)
   .card-body.d-flex
     .w-100
       .mb-3
         = comment.content
       .small
-        .nested_comments.ml-2
+        .nested_comments.ml-2 id="comment_#{comment.id}_nested_comments"
           = nested_comments(post, comment.descendants.arrange(order: :created_at))
   hr.my-2
   .mb-2.m-4
