--- a/app/views/posts/comments/_nested_comment.html.slim
+++ b/app/views/posts/comments/_nested_comment.html.slim
@@ -10,4 +10,4 @@ hr.my-2
   .mb-2
     a data-bs-toggle='collapse' href="#new_post_comment_#{comment.id}" Ответить
     .collapse data-bs-target="#new_post_comment_#{comment.id}" id="new_post_comment_#{comment.id}"
-      = render 'posts/comments/form', post:, comment: PostComment.new(parent_id: comment.id)
+      = render 'posts/comments/form', post: post, comment: PostComment.new(parent_id: comment.id)
