--- a/app/views/posts/_form.html.slim
+++ b/app/views/posts/_form.html.slim
@@ -1,5 +1,5 @@
 = simple_form_for(post, { html: { data: { turbo: false } } }) do |f|
   = f.input :title
   = f.input :body
-  = f.association :post_category, value_method: :id
+  = f.association :category, value_method: :id
   = f.button :submit, class: 'btn-primary mt-4'
