--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -4,7 +4,7 @@
       li.breadcrumb-item
         = link_to('Все статьи', root_path)
       li.breadcrumb-item
-        = @post.post_category.name
+        = @post.category.name
   .row.justify-content-center.mt-4
     article.col-12
       h1.mb-4.mb-lg-5
@@ -26,6 +26,6 @@
     | Комментарий
     = render 'posts/comments/form', post: @post, comment: @comment
   = turbo_frame_tag dom_id_for_records(@post, prefix: 'comments')
-    - @post.post_comments.where(ancestry: nil).each do |pc|
+    - @post.comments.where(ancestry: nil).each do |pc|
       div id="#{dom_id_for_records(pc)}"
         = render 'posts/comments/comment', post: @post, comment: pc
