--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -2,7 +2,7 @@
   nav aria-label="breadcrumb"
     ol.breadcrumb
       li.breadcrumb-item
-        = link_to('Все статьи', root_path)
+        = link_to(t('all_posts'), root_path)
       li.breadcrumb-item
         = @post.category.name
   .row.justify-content-center.mt-4
@@ -23,7 +23,7 @@
           - else
             = render 'posts/likes/like', post: @post
   .lead.mb-3
-    | Комментарий
+    = t('comments')
     = render 'posts/comments/form', post: @post, comment: @comment
   = turbo_frame_tag dom_id_for_records(@post, prefix: 'comments')
     - @post.comments.where(ancestry: nil).each do |pc|
