--- a/app/views/devise/passwords/new.html.slim
+++ b/app/views/devise/passwords/new.html.slim
@@ -1,11 +1,12 @@
 h2
-  | Forgot your password?
-= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f|
-  = render 'devise/shared/error_messages', resource: resource
-  .form-group
-    = f.label :email
-    br
-    = f.email_field :email, autofocus: true, autocomplete: 'email', class: 'form-control'
-  .actions.mt-3
-    = f.submit 'Send me reset password instructions', class: 'btn btn-primary'
+  = t('.forgot_your_password')
+= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f|
+  = f.error_notification
+  .form-inputs
+    = f.input :email,
+                     required: true,
+                     autofocus: true,
+                     input_html: { autocomplete: 'email' }
+  .form-actions.mt-3
+    = f.button :submit, t('.send_me_reset_password_instructions'), class: 'btn btn-primary'
 = render 'devise/shared/links'
