--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -1,21 +1,18 @@
 h2
-  | Sign up
-= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-  = render 'devise/shared/error_messages', resource: resource
-  .form-group
-    = f.label :email
-    = f.email_field :email, autofocus: true, autocomplete: 'email', class: 'form-control'
-  .form-group
-    = f.label :password
-    - if @minimum_password_length
-      em
-        | (
-        = @minimum_password_length
-        |  characters minimum)
-    = f.password_field :password, autocomplete: 'new-password', class: 'form-control'
-  .form-group
-    = f.label :password_confirmation
-    = f.password_field :password_confirmation, autocomplete: 'new-password', class: 'form-control'
-  .actions.mt-3
-    = f.submit 'Sign up', class: 'btn btn-primary'
+  = t('.sign_up')
+= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+  = f.error_notification
+  .form-inputs
+    = f.input :email,
+                     required: true,
+                     autofocus: true,
+                     input_html: { autocomplete: 'email' }
+    = f.input :password,
+                     required: true,
+                     input_html: { autocomplete: 'new-password' }
+    = f.input :password_confirmation,
+                     required: true,
+                     input_html: { autocomplete: 'new-password' }
+  .form-actions.mt-3
+    = f.button :submit, t('.sign_up'), class: 'btn btn-primary'
 = render 'devise/shared/links'
